unpackaged/main/default/objects/Advance_Price_Multiplier__c/Advance_Price_Multiplier__c.object-meta.xml
<CustomObject>
    <label>Advance Price Multiplier</label>
    <nameField>
        <label>Advance Price Multiplier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advance Price Multiplier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>