unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advance Price Multiplier (Agent)</relationshipLabel>
    <relationshipName>Advance_Price_Multiplier</relationshipName>
    <type>Lookup</type>
</CustomField>