unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/agent_code__c.field-meta.xml
<CustomField>
    <fullName>agent_code__c</fullName>
    <label>agent code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>