unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/Agent_is_Blank__c.field-meta.xml
<CustomField>
    <fullName>Agent_is_Blank__c</fullName>
    <formula>ISBLANK(Agent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent is Blank</label>
    <type>Checkbox</type>
</CustomField>