unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/Approval_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Approval_Threshold__c</fullName>
    <inlineHelpText>Cable Management Threshold. Below this Multiplier, Additional Approval is required.</inlineHelpText>
    <label>Approval Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>