unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/Cable_Multiplier_Match__c.field-meta.xml
<CustomField>
    <fullName>Cable_Multiplier_Match__c</fullName>
    <label>Cable Management Multiplier Match</label>
    <type>TextArea</type>
</CustomField>