unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advance Price Multiplier</relationshipLabel>
    <relationshipName>Advance_Price</relationshipName>
    <type>Lookup</type>
</CustomField>