unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/Customer_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Key__c</fullName>
    <formula>Customer_Group__c &amp;  Customer_Sub_Group__c</formula>
    <label>Customer Group Key</label>
    <type>Text</type>
</CustomField>