unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/Customer_Group_Key_is_null__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Key_is_null__c</fullName>
    <formula>ISBLANK(Customer_Group_Key__c)</formula>
    <label>Customer Group Key is null</label>
    <type>Checkbox</type>
</CustomField>