unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External_Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>