unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/Item_Group__c.field-meta.xml
<CustomField>
    <fullName>Item_Group__c</fullName>
    <label>Item Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>