unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/Pricing_Group__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Group__c</fullName>
    <label>Pricing Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>