unpackaged/main/default/objects/Advance_Price_Multiplier__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <label>UoM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>