unpackaged/main/default/objects/Advance_Price_Multiplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Multiplier__c</columns>
    <columns>Approval_Threshold__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Pricing_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>