unpackaged/main/default/objects/Advance_Price_Multiplier__c/listViews/Cable_Management.listView-meta.xml
<ListView>
    <fullName>Cable_Management</fullName>
    <columns>NAME</columns>
    <columns>Multiplier__c</columns>
    <columns>Approval_Threshold__c</columns>
    <columns>Cable_Multiplier_Match__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pricing_Group__c</field>
        <operation>equals</operation>
        <value>COPE</value>
    </filters>
    <label>Cable Management</label>
</ListView>